[tool.poetry]
name = "breakdown-technician-admin-backend"
version = "0.1.0"
description = "Technician and admin backend for road assistance booking system"
authors = ["Your Name <your.email@example.com>"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
sqlalchemy = "2.0.23"
asyncpg = "0.29.0"
aiomysql = "^0.2.0"
alembic = "1.12.1"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-multipart = "0.0.6"
pydantic = {extras = ["email"], version = "2.5.0"}
pydantic-settings = "2.1.0"
redis = ">=5.0.1"
razorpay = "1.4.1"
stripe = "^7.9.0"
celery = "5.3.4"
httpx = "0.25.1"
python-dotenv = "1.0.0"
setuptools = "^69.0.0"
google-auth = "2.23.4"
google-auth-oauthlib = "1.1.0"
google-auth-httplib2 = "0.1.1"
authlib = "1.2.1"
pymysql = "^1.1.2"
argon2-cffi = "^25.1.0"
boto3 = {version = ">=1.28.0", python = ">=3.9"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"